<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".ContactFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/welcomeMargin"
        android:textSize="@dimen/welcomeTextSize"
        android:textColor="@color/maroon"
        android:textStyle="bold"
        android:layout_margin="@dimen/eventTextMargin"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contactHeader" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eventTextMargin"
        android:textSize="@dimen/welcomeMessageTextSize"
        android:textColor="@color/white"
        android:text="@string/Address" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/eventTextMargin"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textSize="@dimen/welcomeMessageTextSize"
        android:textColor="@color/white"
        android:text="@string/email" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/eventTextMargin"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/welcomeMessageTextSize"
        android:text="@string/hours" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/eventTextMargin"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textSize="@dimen/welcomeMessageTextSize"
        android:textColor="@color/white"
        android:text="@string/followUs" />

</LinearLayout>