<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:tabIndicatorColor="@color/teal_200"
        app:tabIndicatorHeight="@dimen/tabHeight"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabHome"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/home"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/event"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/events"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/connect"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Connect"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/demoViewPager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>