<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".EventsFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventHeader"
        android:layout_marginTop="@dimen/welcomeMargin"
        android:textSize="@dimen/welcomeTextSize"
        android:textColor="@color/maroon"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_margin="@dimen/eventTextMargin"
    android:orientation="horizontal">

        <ImageView
        android:id="@+id/imageView"
            android:layout_width="@dimen/images"
        android:layout_height="24dp"
        android:src="@drawable/school_28dp_000000_fill0_wght400_grad0_opsz24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/welcomeMessageTextSize"
        android:textColor="@color/white"

        android:text="@string/gradText" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="@dimen/eventTextMargin"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/images"
        android:layout_height="@dimen/images"
        android:contentDescription="@string/intramuralText"
        android:src="@drawable/palette" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/welcomeMessageTextSize"
        android:textColor="@color/white"
        android:text="@string/cultureText" />
</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eventTextMargin"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/images"
        android:layout_height="@dimen/images"
        android:contentDescription="@string/intramuralText"
        android:src="@drawable/work" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/welcomeMessageTextSize"
        android:textColor="@color/white"

        android:text="@string/careerText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eventTextMargin"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/images"
        android:layout_height="@dimen/images"
        android:src="@drawable/sports" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/welcomeMessageTextSize"
        android:text="@string/intramuralText" />

    </LinearLayout>

</LinearLayout>